--- a/.github/workflows/plantuml-md.yml
+++ b/.github/workflows/plantuml-md.yml
@@ -19,12 +19,13 @@ jobs:
       - name: Generate PlantUML diagrams
         uses: grassedge/generate-plantuml-action@v1.5
         with:
-          path: docs/dbms          # где лежат .puml файлы
-          format: svg              # или png, если нужен PNG
-          outputPath: docs/dbms    # где складывать .svg/.png (рядом с .puml)
+          path: docs/dbms
+          message: "Render PlantUML files"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Commit generated diagrams
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "Generate PlantUML diagrams"
-          file_pattern: "docs/dbms/*.svg docs/dbms/*.png"
+          file_pattern: "docs/dbms/**"
