fix: mkdocs_puml plugin (working PlantUML)

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -3,15 +3,11 @@ name: Deploy Documentation
 on:
   push:
     branches: [ main, master ]
-    paths:
-      - 'docs/**'
-      - 'mkdocs.yml'
-      - 'requirements.txt'
+    paths-ignore:
+      - '*.md'  # НЕ игнорируем docs!
   pull_request:
-    paths:
-      - 'docs/**'
-      - 'mkdocs.yml'
-      - 'requirements.txt'
+    paths-ignore:
+      - '*.md'
   workflow_dispatch:
 
 jobs:
@@ -25,12 +21,18 @@ jobs:
       with:
         python-version: '3.11'
     
+    - name: Cache pip
+      uses: actions/cache@v4
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+    
     - name: Install dependencies
       run: |
-        pip install mkdocs mkdocs-material
+        pip install -r requirements.txt
     
-    - name: Build docs
-      run: mkdocs build --verbose
+    - name: Build & test
+      run: mkdocs build --strict --verbose
     
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
@@ -45,6 +47,6 @@ jobs:
       pages: write
       id-token: write
     steps:
-    - name: Deploy to GitHub Pages
+    - name: Deploy
       id: deployment
       uses: actions/deploy-pages@v4
