--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,31 +1,131 @@
-site_name: Красные флажки
+site_name: 🚩 Красные флажки
+site_description: Анализ юридических рисков в договорах с помощью ИИ
 site_url: https://trofimovelijah.github.io/red-flag-analysis
+site_author: Илья Ю. Трофимов
+repo_url: https://github.com/trofimovelijah/red-flag-analysis
+repo_name: trofimovelijah/red-flag-analysis
 
 theme:
   name: material
   language: ru
+  favicon: images/favicon.png
+  logo: images/logo.png
+  
+  palette:
+    # Светлая тема (красная)
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      primary: red
+      accent: deep orange
+      toggle:
+        icon: material/weather-sunny
+        name: Тёмная тема
+    
+    # Тёмная тема (красно-оранжевая)
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      primary: red
+      accent: orange
+      toggle:
+        icon: material/weather-night
+        name: Светлая тема
+  
   features:
+    - announce.dismiss
+    - content.action.edit
+    - content.action.view
     - content.code.copy
+    - content.code.annotate
     - navigation.tabs
+    - navigation.tabs.sticky
     - navigation.sections
+    - navigation.expand
+    - navigation.indexes
+    - navigation.top
+    - navigation.footer
+    - navigation.tracking
+    - search.suggest
+    - search.highlight
+    - search.share
+    - toc.follow
+    - toc.integrate
+
+# 🎯 Расширение контента для таблиц
+extra_css:
+  - stylesheets/extra.css
 
 nav:
-  - Главная: index.md
-  - Технический проект: technical_project/README.md
-  - Вопросы: qa/question.md
-
+  - 🏠 Главная: index.md
+  - 📚 Технический проект: technical_project/README.md
+  - ❓ Вопросы: qa/question.md
 
 plugins:
-  - search
-  - include-markdown:
+  - search:
+      lang: ru
+      separator: '[\s\-,:!=\[\]()"/]+|\.(?!\d)|&[lg]t;|(?!\b)(?=[A-Z][a-z])'
+  - tags
+  - git-revision-date-localized:
 #      heading_offset: -1  # Сдвигает заголовки на уровень вверх для единого уровня
-      rewrite_relative_urls: true
-  - plantuml:
-      puml_url: https://www.plantuml.com/plantuml/
+      enable_creation_date: true
+      type: timeago
 
 markdown_extensions:
+  - abbr
+  - admonition
+  - attr_list
+  - def_list
+  - footnotes
+  - md_in_html
+  - tables
   - toc:
       permalink: true
-  - tables
-  - pymdownx.highlight
-  - pymdownx.superfences
+      title: Содержание
+  - pymdownx.arithmatex:
+      generic: true
+  - pymdownx.betterem:
+      smart_enable: all
+  - pymdownx.caret
+  - pymdownx.details
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.keys
+  - pymdownx.mark
+  - pymdownx.smartsymbols
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
+  - pymdownx.tabbed:
+      alternate_style: true
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.tilde
+
+extra:
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/trofimovelijah/red-flag-analysis
+      name: GitHub репозиторий
+    - icon: fontawesome/brands/telegram
+      link: https://t.me/yourusername
+      name: Telegram
+  
+  analytics:
+    feedback:
+      title: Была ли эта страница полезна?
+      ratings:
+        - icon: material/emoticon-happy-outline
+          name: Отлично!
+          data: 1
+          note: Спасибо за отзыв!
+        - icon: material/emoticon-sad-outline
+          name: Можно лучше
+          data: 0
+          note: Спасибо! Учтём ваши пожелания.
