--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -2,12 +2,11 @@ name: Deploy Documentation
 
 on:
   push:
-    branches: [ main, master ]
-    paths-ignore:
-      - '*.md'  # НЕ игнорируем docs!
-  pull_request:
-    paths-ignore:
-      - '*.md'
+    branches: [ main ]
+    paths:
+      - 'docs/**'
+      - 'mkdocs.yml'
+      - 'requirements.txt'
   workflow_dispatch:
 
 jobs:
@@ -16,23 +15,16 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
-    - name: Setup Python
-      uses: actions/setup-python@v5
+    - uses: actions/setup-python@v5
       with:
         python-version: '3.11'
-    
-    - name: Cache pip
-      uses: actions/cache@v4
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        cache: 'pip'
     
     - name: Install dependencies
-      run: |
-        pip install -r requirements.txt
+      run: pip install -r requirements.txt
     
-    - name: Build & test
-      run: mkdocs build --strict --verbose
+    - name: Build documentation
+      run: mkdocs build --strict
     
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
@@ -41,12 +33,10 @@ jobs:
 
   deploy:
     needs: build
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest
     permissions:
       pages: write
       id-token: write
     steps:
-    - name: Deploy
-      id: deployment
-      uses: actions/deploy-pages@v4
+    - uses: actions/deploy-pages@v4
