--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -3,10 +3,8 @@ name: Deploy Documentation
 on:
   push:
     branches: [ main ]
-    paths:
-      - 'docs/**'
-      - 'mkdocs.yml'
-      - 'requirements.txt'
+    paths-ignore:
+      - '*.md'
   workflow_dispatch:
 
 jobs:
