--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,10 @@
-site_name: 🚩 Красные флажки
+site_name: Красные флажки
 site_description: Анализ юридических рисков в договорах с помощью ИИ
 site_url: https://trofimovelijah.github.io/red-flag-analysis
-site_author: Илья Ю. Трофимов
+site_author: Elijah Trofimov
 repo_url: https://github.com/trofimovelijah/red-flag-analysis
 repo_name: trofimovelijah/red-flag-analysis
+edit_uri: ""  # Отключает кнопку "Редактировать"
 
 theme:
   name: material
@@ -12,28 +13,26 @@ theme:
   logo: images/logo.png
   
   palette:
-    # Светлая тема (красная)
+    # Светлая тема (синий Bauhaus)
     - media: "(prefers-color-scheme: light)"
       scheme: default
-      primary: red
-      accent: deep orange
+      primary: indigo
+      accent: blue
       toggle:
         icon: material/weather-sunny
-        name: Тёмная тема
+        name: Переключить на тёмную тему
     
-    # Тёмная тема (красно-оранжевая)
+    # Тёмная тема
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
-      primary: red
-      accent: orange
+      primary: indigo
+      accent: blue
       toggle:
         icon: material/weather-night
-        name: Светлая тема
+        name: Переключить на светлую тему
   
   features:
     - announce.dismiss
-    - content.action.edit
-    - content.action.view
     - content.code.copy
     - content.code.annotate
     - navigation.tabs
@@ -50,7 +49,6 @@ theme:
     - toc.follow
     - toc.integrate
 
-# 🎯 Расширение контента для таблиц
 extra_css:
   - stylesheets/extra.css
 
@@ -63,11 +61,19 @@ plugins:
   - search:
       lang: ru
       separator: '[\s\-,:!=\[\]()"/]+|\.(?!\d)|&[lg]t;|(?!\b)(?=[A-Z][a-z])'
+  - include-markdown:
+      opening_tag: "{%"
+      closing_tag: "%}"
+      encoding: utf-8
+      preserve_includer_indent: true
+      dedent: false
+      trailing_newlines: true
+      comments: false
   - tags
   - git-revision-date-localized:
-#      heading_offset: -1  # Сдвигает заголовки на уровень вверх для единого уровня
       enable_creation_date: true
       type: timeago
+      fallback_to_build_date: true
 
 markdown_extensions:
   - abbr
@@ -80,8 +86,7 @@ markdown_extensions:
   - toc:
       permalink: true
       title: Содержание
-  - pymdownx.arithmatex:
-      generic: true
+      toc_depth: 3
   - pymdownx.betterem:
       smart_enable: all
   - pymdownx.caret
@@ -113,9 +118,6 @@ extra:
     - icon: fontawesome/brands/github
       link: https://github.com/trofimovelijah/red-flag-analysis
       name: GitHub репозиторий
-    - icon: fontawesome/brands/telegram
-      link: https://t.me/yourusername
-      name: Telegram
   
   analytics:
     feedback:
