--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,4 @@ mkdocs>=1.5.3,<1.6.0
 mkdocs-material>=9.5.0
 mkdocs-include-markdown-plugin>=6.0.0
 mkdocs-git-revision-date-localized-plugin>=1.2.0
+mkdocs-macros-plugin>=1.0.0
