--- a/.github/ISSUE_TEMPLATE/non_functional_req.yml
+++ b/.github/ISSUE_TEMPLATE/non_functional_req.yml
@@ -1,4 +1,4 @@
-name: Нефункциональное требование
+name: Non-functional Requirement
 description: "Нефункциональное требование (НФТ)"
 title: "[Requirement] НФТ-XX: Краткое название"
 labels: ["requirement", "non_functional_req"]
