#48 Снята обязательность в Описания в НФТ

--- a/.github/ISSUE_TEMPLATE/non_functional_req.yml
+++ b/.github/ISSUE_TEMPLATE/non_functional_req.yml
@@ -8,7 +8,7 @@ body:
     attributes:
       label: Описание
     validations:
-      required: true
+      required: false
 
   - type: textarea
     id: acceptance
