add #10. Отредактирован redis.conf

--- a/configuration/docker-compose.yaml
+++ b/configuration/docker-compose.yaml
@@ -36,7 +36,11 @@ services:
     volumes:
       - redis_data:/data
       - ./redis/redis.conf:/usr/local/etc/redis/redis.conf:ro
-    command: redis-server /usr/local/etc/redis/redis.conf
+    env_file:
+      - .env
+    command: > 
+      redis-server /usr/local/etc/redis/redis.conf 
+      --requirepass ${REDIS_PASSWORD}
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
