--- a/configuration/redis/redis.conf
+++ b/configuration/redis/redis.conf
@@ -1,54 +1,109 @@
 # Redis конфигурация для Docker
 
-# Слушать все интерфейсы (необходимо для Docker networking)
-bind 0.0.0.0
+# ========================
+# СЕТЬ И ПОДКЛЮЧЕНИЕ
+# ========================
 
-# Порт подключения
+# Привязка к внутреннему IP Docker-сети.
+# Без использования 0.0.0.0 в продакшн - может открыть Redis для всех.
+bind 127.0.0.1
+
+# Порт подключениям (стандартный)
 port 6379
 
-# Режим protected-mode
+# Таймаут неактивного соединения (сек). 0 = не отключать.
+# 300 сек - если клиент молчит 5 минут, соединение разрывается.
+timeout 300
+
+# Интервал TCP keepalive (сек). Помогает обнаруживать «мёртвые» соединения.
+tcp-keepalive 60
+
+# Максимальное количество клиентов (в рамках MVP)
+maxclients 1000
+
+# ========================
+# БЕЗОПАСНОСТЬ
+# ========================
+
+# Требование пароля для аутентификации. Указан в docker-compose.yml
+# requirepass redis_password
+
+# Отключаем опасные команды, чтобы случайно не обнулить базу.
+rename-command FLUSHDB ""
+rename-command FLUSHALL ""
+rename-command DEBUG ""
+rename-command CONFIG "CONFIG_SECRET_CMD"
+
+# Режим protected-mode. Запрет внешних подключений без пароля.
 protected-mode yes
 
-# Требование пароля для аутентификации
-requirepass redis_password
+# ========================
+# ПАМЯТЬ
+# ========================
 
-# Логирование
-loglevel notice
-logfile "/data/redis.log"
+# Максимум памяти. Для старта достаточно 256 МБ.
+# При росте пользователей увеличивайте (512mb, 1gb).
+maxmemory 256mb
 
-# ========== PERSISTENCE - RDB (снимки) ==========
-# Сохранить если изменилось 1 ключ за 900 секунд
+# Политика вытеснения — удаляем ключи с TTL, которые реже используются.
+# Это безопасная стратегия: данные без TTL не будут удалены.
+maxmemory-policy allkeys-lru
+
+# ========================
+# ПЕРСИСТЕНТНОСТЬ (RDB)
+# ========================
+
+# Снимки данных на диск. Формат: save <секунды> <мин. изменений>
+# Каждые 900 сек (15 мин) если было хотя бы 1 изменение.
 save 900 1
-# Сохранить если изменилось 10 ключей за 300 секунд
+# Каждые 300 сек (5 мин) если было >= 10 изменений.
 save 300 10
-# Сохранить если изменилось 10000 ключей за 60 секунд
-save 60 10000
+# Каждые 60 сек если было >= 1000 изменений.
+save 60 1000
 
-# Остановить запись RDB если произошла ошибка
-stop-writes-on-bgsave-error yes
+# Имя файла дампа
+dbfilename redflag_dump.rdb
 
-# Сжимать RDB файл
-rdbcompression yes
-
-# Имя RDB файла
-dbfilename dump.rdb
-
-# Директория для RDB файлов
+# Директория для файлов дампа
 dir /data
 
-# ========== PERSISTENCE - AOF (Append Only File) ==========
+# Остановить запись RDB, если произошла ошибка
+stop-writes-on-bgsave-error yes
+
+# Сжатие RDB файла для экономии места на диске
+rdbcompression yes
+
+
+
+# ========================
+# AOF (Append Only File) — журнал операций
+# ========================
+
+# Включаем AOF для более надёжного восстановления.
 appendonly yes
-appendfilename "appendonly.aof"
-# Синхронизировать после каждой команды (медленнее но безопаснее)
+
+# Имя файла AOF
+appendfilename "redflag_appendonly.aof"
+
+# Частота синхронизации:
+# everysec — записывать на диск каждую секунду (компромисс надёжности и скорости)
 appendfsync everysec
 
-# ========== ДРУГИЕ ПАРАМЕТРЫ ==========
-# Количество баз данных
+
+# ========================
+# ЛОГИРОВАНИЕ
+# ========================
+
+# Уровень логирования. notice — стандартный продакшен-уровень.
+loglevel notice
+# Файл логов. Пустая строка = вывод в stdout (для Docker это удобно), но сейчас в redis.log
+logfile "/data/redis.log"
+
+
+# ========================
+# КОЛИЧЕСТВО БАЗ ДАННЫХ
+# ========================
+
+# Redis поддерживает до 16 БД (нумерация 0-15).
+# Нам нужны 3: сессии, кэш, счётчики.
 databases 16
-
-# Максимальное количество клиентов
-maxclients 10000
-
-# Таймауты
-timeout 0
-tcp-keepalive 300
